[gd_scene load_steps=4 format=3 uid="uid://vqid1s1nly1f"]

[ext_resource type="Script" path="res://scripts/challenge1.gd" id="1_p5n7y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_63g50"]

[sub_resource type="Theme" id="Theme_4jeqb"]
OptionButton/icons/arrow = SubResource("AtlasTexture_63g50")

[node name="Challenge" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, -1)
script = ExtResource("1_p5n7y")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.00817e-06, 0.474507, 0.11392, 1)

[node name="CodeEdit" type="CodeEdit" parent="ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "#include <stdio.h>
int main(void)  {
	int i = 3;
	while
	{ 
		colocar_cerca();

	} 
}"
editable = false
gutters_draw_line_numbers = true

[node name="WhileOption" type="OptionButton" parent="ColorRect/CodeEdit"]
layout_mode = 0
offset_left = 85.0
offset_top = 81.0
offset_right = 169.0
offset_bottom = 100.0
theme = SubResource("Theme_4jeqb")

[node name="IncOption" type="OptionButton" parent="ColorRect/CodeEdit"]
layout_mode = 0
offset_left = 58.0
offset_top = 166.0
offset_right = 142.0
offset_bottom = 185.0
theme = SubResource("Theme_4jeqb")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CodeEdit"]
layout_mode = 0
offset_left = 28.0
offset_top = 260.0
offset_right = 528.0
offset_bottom = 646.0

[node name="Aviso" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.972549, 0, 0, 1)

[node name="Btns" type="HBoxContainer" parent="ColorRect/CodeEdit/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 300
metadata/_edit_lock_ = true

[node name="RunBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
layout_mode = 2
text = "Run Code"
metadata/_edit_lock_ = true

[node name="CloseBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
layout_mode = 2
text = "Close"
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
custom_minimum_size = Vector2(500, 324)
layout_mode = 2
text = "################################################

Seu objetivo é encontrar o código correto para esse loop for e consertar a cerca. Lembrando que estão faltando 5 pedaços de  cerca, lembre-se que ela é um vetor.

Boa Sorte!!!
################################################"
autowrap_mode = 3
metadata/_edit_lock_ = true

[connection signal="item_selected" from="ColorRect/CodeEdit/WhileOption" to="." method="_on_while_option_item_selected"]
[connection signal="item_selected" from="ColorRect/CodeEdit/IncOption" to="." method="_on_inc_option_item_selected"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/CloseBtn" to="." method="_on_close_btn_pressed"]
